:arrow_up: Upgrade dependencies. 升级基线版本 2.479.3